--- a/index.html
+++ b/index.html
@@ -15,19 +15,19 @@
 					<h4 class="sidebar__header">
 						Filter Search
 					</h4>
-					<div class="sidebar-filters">
-						<label class="sidebar-filters__label" for="keyword">Keyword</label>
-						<input type="text" id="keyword" name="keyword-search" class="sidebar-filters__field">
-						<label for="year" class="sidebar-filters__label">Year</label>
-						<select name="year" id="year" class="sidebar-filters__field">
+					<div class="filter-search">
+						<label class="filter-search__label" for="keyword">Keyword</label>
+						<input type="text" id="keyword" name="keyword-search" class="filter-search__select">
+						<label for="year" class="filter-search__label">Year</label>
+						<select name="year" id="year" class="filter-search__select">
 							<option value="">2017</option>
 							<option value="">2016</option>
 							<option value="">2015</option>
 							<option value="">2014</option>
 							<option value="">2013</option>
 						</select>
-						<label for="month" class="sidebar-filters__label">Month</label>
-						<select name="month" id="month" class="sidebar-filters__field">
+						<label for="month" class="filter-search__label">Month</label>
+						<select name="month" id="month" class="filter-search__select">
 							<option value="January">January</option>
 							<option value="Febuary">Febuary</option>
 							<option value="March">March</option>
@@ -41,25 +41,23 @@
 							<option value="November">November</option>
 							<option value="December">December</option>
 						</select>
-						<div class="sidebar__buttons">
-							<button class="sidebar__buttons--primary">Apply Filter</button>
-							<button class="sidebar__buttons--link-button">Clear Filter</button>
+						<div class="filter-search__containers filter-search__containers--buttons">
+							<button class="filter-search__button">Apply Filter</button>
+							<button class="filter-search__link">Clear Filter</button>
 						</div>					
 					</div>
 				</div>
 				<div class="search-results-content">
 					<div class="list-block">
-						<div class="search-results">
-							<h2 class="list-block__title">Disclosure Log</h2>
-							<ul class="list-block__list">
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-								<li class="list-block__list-item"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
-							</ul>
-						</div>
+						<h2 class="list-block__title">Disclosure Log</h2>
+						<ul class="list-block__list">
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+							<li class="list-block__list-item list-block__list-item--border"><a class="list-block__list-item-title" href="#">Community right to bid</a><span class="list-block__list-item-info">Full Disclosure - Publish Date: 20th November 2016</span>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</li>
+						</ul>
 					</div>
 				</div>
 				<div class="sidebar-background"></div>
