--- a/itempage.html
+++ b/itempage.html
@@ -42,16 +42,15 @@
 				</div>
 				<div class="sidebar">
 					<div class="list-block">
-						<div class="sidebar-related">
-							<h2 class="list-block__title">Related</h4>					
-								<ul class="list-block__list">
-									<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-									<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-									<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-									<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-								</ul>
-							</div>
-						</div>
+	
+						<h2 class="list-block__title list-block__title--strong">Related</h4>					
+						<ul class="list-block__list">
+							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+						</ul>
+				
 					</div>
 					<div class="sidebar-background"></div>			
 				</main>
