--- a/itempage.html
+++ b/itempage.html
@@ -1,5 +1,6 @@
 <html>
 <head>
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
@@ -12,47 +13,45 @@
 			</header>
 			<main id="item-page">
 				<div class="item-page-content">
-					<div class="item-page-header">
-						<h2 class="item-page-content__title">Subject Access Request</h2>
-						<ul class="item-page-header__list">
-							<li class="item-page-header__list-item"><span class="item-page-header__list-item-title">Date of Reposne</span>2nd December 2016</li>
-							<li class="item-page-header__list-item"><span class="item-page-header__list-item-title">Case No.</span>FOI2016/00113</li>
-							<li class="item-page-header__list-item"><span class="item-page-header__list-item-title">Published</span>22nd November 2016</li>
-							<li class="item-page-header__list-item"><span class="item-page-header__list-item-title">Disclosure Outcomes</span>Granted In Full</li>
+					<div class="listed-article">
+						<h2 class="listed-article__title">Subject Access Request</h2>
+						<ul class="listed-article__list">
+							<li class="listed-article__list-item listed-article__list-item--flow-across"><span class="listed-article__list-item-title">Date of Response</span>2nd December 2016</li>
+							<li class="listed-article__list-item listed-article__list-item--flow-across"><span class="listed-article__list-item-title">Case No.</span>FOI2016/00113</li>
+							<li class="listed-article__list-item listed-article__list-item--flow-across"><span class="listed-article__list-item-title">Published</span>22nd November 2016</li>
+							<li class="listed-article__list-item listed-article__list-item--flow-across"><span class="listed-article__list-item-title">Disclosure Outcomes</span>Granted In Full</li>
 						</ul>
 					</div>
-					<div class="item-page-body">
-						<div class="item-page-info-block">
-							<h2 class="item-page-content__title">Request</h2>
-							<p class="item-page-request__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+					<div class="primary-article">
+						<div class="primary-article__section">
+							<h2 class="primary-article__title">Request</h2>
+							<p class="primary-article__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
 						</div>
-						<div class="item-page-info-block">
-							<h2 class="item-page-content__title">Response</h2>
-							<p class="item-page-response__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+						<div class="primary-article__section">
+							<h2 class="primary-article__title">Response</h2>
+							<p class="primary-article__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
 						</div>
-						<div class="item-page-info-block">
-							<h2 class="item-page-content__title">Exemptions/Exceptions</h2>
-							<p class="item-page-request__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+						<div class="primary-article__section">
+							<h2 class="primary-article__title">Exemptions/Exceptions</h2>
+							<p class="primary-article__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
 						</div>
-						<div class="item-page-info-block">
-							<h2 class="item-page-content__title">Documents</h2>
-							<p class="item-page-request__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
+						<div class="primary-article__section">
+							<h2 class="primary-article__title">Documents</h2>
+							<p class="primary-article__text">lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsum</p>
 						</div>
 					</div>	
 				</div>
-				<div class="sidebar">
-					<div class="list-block">
-	
-						<h2 class="list-block__title list-block__title--strong">Related</h4>					
-						<ul class="list-block__list">
-							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-							<li class="list-block__list-item"><a href="#" class="list-block__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
-						</ul>
-				
-					</div>
-					<div class="sidebar-background"></div>			
+				<div class="sidebar sidebar--right">
+					<div class="listed-article">
+						<h2 class="listed-article__title listed-article__title--light">Related</h4>					
+							<ul class="listed-article__list">
+								<li class="listed-article__list-item"><a href="#" class="listed-article__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+								<li class="listed-article__list-item"><a href="#" class="listed-article__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+								<li class="listed-article__list-item"><a href="#" class="listed-article__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+								<li class="listed-article__list-item"><a href="#" class="listed-article__list-item-title">Recycling Plans</a>lorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem ipsumlorem</li>
+							</ul>
+						</div>
+					</div>		
 				</main>
 			</div>
 		</div>
